# HwInfoTest

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COMPARISON.md  DISK_GUIDE.md  FIX_COMPILATION.md  HardwareInfo.h  HardwareInfoProvider.cpp  HardwareInfoProvider.h  HardwareInfoProvider_Documentation_EN_v2.2.md  HardwareInfoProvider_Documentation_v2.2.md  INDEX.md  MainWindow.cpp  MainWindow.h  Makefile  QUICKSTART.md  README.md  SUMMARY.md  SystemScorer.cpp  SystemScorer.h  VERSION_3.2.md  build_hwinfo.bat  hwinfo  hwinfo.pro  main.cpp
src/: HardwareInfoProvider.cpp  HardwareInfoProvider.h  main.cpp
